[package]
name = "fast_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_pcg = "*"
rand = "*"

[dev-dependencies]
metrohash = "*"
criterion = { version = "*", features = ["html_reports"] }

[profile.bench]
# debug = true

[[bench]]
name = "benchmark"
harness = false
